--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.4",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
     "react": "^18.2.0",
